--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,8 @@
-.DS_Store
-*.gem
-*.rbc
-.bundle
-.config
-.yardoc
-.idea/
 Gemfile.lock
-InstalledFiles
-_yardoc
+*.gem
+.bundle
+.yardoc
 coverage
-lib/bundler/man
-pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
+doc
 tmp
+spec/examples.txt
